[gd_scene load_steps=4 format=3 uid="uid://by6enp1a1o7w6"]

[ext_resource type="Script" path="res://scenes/draggables/toppings/pearl.gd" id="1_jb3cf"]
[ext_resource type="Texture2D" uid="uid://w26wfwrcf8yi" path="res://art/place holders/cup.png" id="1_pql0l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lta3s"]
size = Vector2(52, 89)

[node name="Node2D" type="CharacterBody2D"]
script = ExtResource("1_jb3cf")

[node name="Cup" type="Sprite2D" parent="."]
visibility_layer = 4
texture = ExtResource("1_pql0l")

[node name="click detection" type="Button" parent="Cup"]
self_modulate = Color(1, 1, 1, 0)
offset_left = -27.0
offset_top = -44.0
offset_right = 27.0
offset_bottom = 44.0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Cup"]
offset_left = -29.0
offset_top = -2.0
offset_right = 29.0
offset_bottom = 21.0
pivot_offset = Vector2(35, 7)
text = "PEARLS"

[node name="Area2D" type="Area2D" parent="." groups=["Cup"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_lta3s")

[connection signal="button_down" from="Cup/click detection" to="." method="_on_click_detection_button_down"]
[connection signal="button_up" from="Cup/click detection" to="." method="_on_click_detection_button_up"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
